exports[`test should render with selected tags 1`] = `
<BubblePopup
  customClass="bubble-popup-bottom-right bubble-popup-menu abs-width-300"
  position={
    Object {
      "left": 0,
      "top": 0,
    }
  }>
  <MultiSelect
    elements={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    listSize={10}
    onSearch={[Function]}
    onSelect={[Function]}
    onUnselect={[Function]}
    selectedElements={
      Array [
        "bar",
      ]
    }
    validateSearchInput={[Function]} />
</BubblePopup>
`;

exports[`test should render without tags at all 1`] = `
<BubblePopup
  customClass="bubble-popup-bottom-right bubble-popup-menu abs-width-300"
  position={
    Object {
      "left": 0,
      "top": 0,
    }
  }>
  <MultiSelect
    elements={Array []}
    listSize={10}
    onSearch={[Function]}
    onSelect={[Function]}
    onUnselect={[Function]}
    selectedElements={Array []}
    validateSearchInput={[Function]} />
</BubblePopup>
`;
